--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <section>
+        <section id="title">
             <div class="wrapper">
                 <h1>Rate with <span class="accented">science</span></h1>
+            </div>
+        </section>
+        <section id="header">
+            <div class="wrapper">
                 <div class="inputs">
                     <label>Make me a scale from</label>
-                    <input type="text" id="start" value="" placeholder="David Hasselhoff"><div class="bg"></div>
+                    <input type="text" id="start" value="" placeholder="David Hasselhoff"><div class="bg"><div class="suggestion" id="suggestion_start"></div></div>
 
                     <label>to</label>
-                    <input type="text" id="end" value="" placeholder="Eiffel Tower"><div class="bg"></div>
+                    <input type="text" id="end" value="" placeholder="Eiffel Tower"><div class="bg"><div class="suggestion" id="suggestion_end"></div></div>
+
+                    <input type="button" id="go" value="Go">
                 </div>
             </div>
         </section>
@@ -24,6 +30,7 @@
             </div>
         </section>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script type="text/javascript" src="rws.js"></script>
     </body>
 </html>
