Load sample scale via ajax

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
             </div>
         </section>
 
+        <section id="results" class="hidden">
+            <div class="wrapper">
+                <div id="scale">
+                </div>
+            </div>
+        </section>
+
         <section id="footer">
             <div class="wrapper">
                 Made by Tristan and Dave
