Error handling, responsive CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <label>Make me a scale from</label>
                     <input type="text" id="start" value="" placeholder="David Hasselhoff"><div class="bg"><div class="suggestion" id="suggestion_start"></div></div>
 
-                    <label>to</label>
+                    <label id="clear">to</label>
                     <input type="text" id="end" value="" placeholder="Eiffel Tower"><div class="bg"><div class="suggestion" id="suggestion_end"></div></div>
 
                     <input type="button" id="go" value="Go">
@@ -24,16 +24,31 @@
             </div>
         </section>
 
+        <section id="loading" class="hidden">
+            <div class="wrapper">
+                Loading...
+            </div>
+        </section>
+
+        <section id="error" class="hidden">
+            <div class="wrapper">
+                <h2>Uh oh!</h2>
+                <p>We couldn't make a scale with your input. Try some other endpoints!</p>
+                <input type="button" id="close_error" value="Try again">
+            </div>
+        </section>
+
         <section id="results" class="hidden">
             <div class="wrapper">
                 <div id="scale">
                 </div>
+                <input type="button" id="again" value="Again?">
             </div>
         </section>
 
         <section id="footer">
             <div class="wrapper">
-                Made by Tristan and Dave
+                Made by <a href="http://thume.ca/">Tristan</a> and <a href="http://davepagurek.com">Dave</a>
             </div>
         </section>
 
