--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <section id="title">
             <div class="wrapper">
-                <h1>Rate with <span class="accented">science</span></h1>
+                <h1>Rate with <span class="accented animated infinite flash">science</span></h1>
             </div>
         </section>
         <section id="header">
@@ -26,7 +26,7 @@
 
         <section id="loading" class="hidden">
             <div class="wrapper">
-                Loading...
+                <img src="spinner.gif">
             </div>
         </section>
 
