Link to Wikipedia articles

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section id="footer">
             <div class="wrapper">
-                Made by <a href="http://thume.ca/">Tristan</a> and <a href="http://davepagurek.com">Dave</a>
+                Made with <span class="heart">&hearts;</span> by <a href="http://thume.ca/">Tristan</a> and <a href="http://davepagurek.com">Dave</a>
             </div>
         </section>
 
